--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-bottom-inner">
-                        <p class="footer-bottom-copy-right">© Copyright 2023 by <a href="#">Нурай</a></p>
+                        <p class="footer-bottom-copy-right">© Copyright 2023 by <a href="#">Розимухаммад</a></p>
                     </div>
                 </div>
             </div>
